adding form and content to enter for my list.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </header>
     <main>
         <form>
-            <label for=""></label>
+            <label for=""> Name:  
+                <input type="text" name="Name" placeholder="Plant Name">
+            </label>
         </form>
       Types of Flower:
       <ul id="flower-list"></ul>
