--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
     </header>
     <main>
         <form>
-            <label for=""> Name:  
-                <input type="text" name="Name" placeholder="Plant Name">
+            <label for="name"> Name:  
+                <input id="name" type="text" name="name" placeholder="Plant Name" />
+            </label>FLower Species
+            <label for="species"  />
+                <input id="species" type="text" name="species" placeholder="Species" />
+            </label> Water Schedule
+            <label for="water-schedule">
+                <input id="water-schedule" type="text" name="water-schedule" placeholder="Water Schedule" />
             </label>
+            <button>Add Flower</button>
         </form>
-      Types of Flower:
-      <ul id="flower-list"></ul>
+      <h2 id="flower-header">Types of Flower:</h2>
+      <ul id="flower-list">
+        
+      </ul>
     </main>
-
     <script src="apps.js"></script>
   </body>
 </html>
