Adjusted the form.

--- a/index.html
+++ b/index.html
@@ -11,22 +11,33 @@
       <p>List of Flower Below</p>
     </header>
     <main>
-        <form>
-            <label for="name"> Name:  
-                <input id="name" type="text" name="name" placeholder="Plant Name" />
-            </label>FLower Species
-            <label for="species"  />
-                <input id="species" type="text" name="species" placeholder="Species" />
-            </label> Water Schedule
-            <label for="water-schedule">
-                <input id="water-schedule" type="text" name="water-schedule" placeholder="Water Schedule" />
-            </label>
-            <button>Add Flower</button>
-        </form>
+      <form>
+        <label for="name">
+          Name:
+          <input id="name" type="text" name="name" placeholder="Plant Name" />
+        </label>
+        <label for="species">
+          FLower Species
+          <input
+            id="species"
+            type="text"
+            name="species"
+            placeholder="Species"
+          />
+        </label>
+        <label for="water-schedule">
+          Water Schedule
+          <input
+            id="water-schedule"
+            type="text"
+            name="water-schedule"
+            placeholder="Water Schedule"
+          />
+        </label>
+        <button>Add Flower</button>
+      </form>
       <h2 id="flower-header">Types of Flower:</h2>
-      <ul id="flower-list">
-        
-      </ul>
+      <ul id="flower-list"></ul>
     </main>
     <script src="apps.js"></script>
   </body>
