added script for the form.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p>List of Flower Below</p>
     </header>
     <main>
-      <form>
+      <form id="flower-form">
         <label for="name">
           Name:
           <input id="name" type="text" name="name" placeholder="Plant Name" />
@@ -25,16 +25,16 @@
             placeholder="Species"
           />
         </label>
-        <label for="water-schedule">
+        <label for="waterSchedule">
           Water Schedule
           <input
-            id="water-schedule"
+            id="waterSchedule"
             type="text"
-            name="water-schedule"
+            name="waterSchedule"
             placeholder="Water Schedule"
           />
         </label>
-        <button>Add Flower</button>
+        <button id="button">Add Flower</button>
       </form>
       <h2 id="flower-header">Types of Flower:</h2>
       <ul id="flower-list"></ul>
