added style sheets

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plant Manager</title>
+    <link rel="stylesheet" href="apps.css" />
   </head>
   <body>
     <header>
@@ -35,6 +36,7 @@
           />
         </label>
         <button id="button">Add Flower</button>
+        <button id="remove-btn">Remove</button>
       </form>
       <h2 id="flower-header">Types of Flower:</h2>
       <ul id="flower-list"></ul>
